[sensors](CrOS/Linux) Add support for als sensor which has "intensity" naming.

This CL adds support for an als sensor that has "in_intensity_both_raw" naming.
What is more, frequency and offset file names are added as well.

Unittests were changed as well - there is no need to separately delete
a frequency file now in order to receive OnSensorReadingChanged event. A zero
value can be used which means "file must not be created"

BUG=670602

Review-Url: https://codereview.chromium.org/2571613003
Cr-Commit-Position: refs/heads/master@{#439571}

Former-commit-id: 1dcb638f139dd8557d992d81d40cbe5cc942887e